--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Nuitka
+main.build/
+main.dist/
+
 # Flask stuff:
 instance/
 .webassets-cache
